# Stake_Demo_Rust

./: .env.example  README.md  package-lock.json  package.json  svelte.config.js
Backend/: Cargo.toml
Backend/src/: dice.rs  game.rs  hasher.rs  keno.rs  main.rs
src/: app.d.ts
src/components/: Error.svelte  KenoTile.svelte
src/components/Auth/: ChangeUsername.svelte
src/components/Keno/: KenoBoard.svelte  KenoTile.svelte
src/lib/: index.ts  keno.ts  supabase-class.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(main)/keno/: +page.svelte
src/routes/keno/: +page.svelte
