[package]
name = "stake_demo_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
sha3 = "0.10"
actix-web = "4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
